fix column spacing

--- a/src/assets/css/components/prod-feature.css
+++ b/src/assets/css/components/prod-feature.css
@@ -101,5 +101,5 @@
   }
   justify-content: center;
   align-items: center;
-  gap: 0;
+  row-gap: 0;
 }
